# IEOR4576E-agentic-ai-Project-1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
app/: __init__.py  backstop.py  config.py  main.py  middleware.py  retry.py
app/models/: __init__.py  schemas.py
app/prompts/: __init__.py  system_prompt.py
data/: models_snapshot_20260221.json  scrape_hf.py
docs/: Project-1-Domain-QA-Chatbot.md
eval/: golden_dataset.json  run_evals.py
static/: index.html
tasks/: edge_cases_to_fix.md  manual_test_plan.md  requirements_review_20260222.md  requirements_review_20260222_1430.md  requirements_review_20260222_1445.md  v1workflow.md
tests/: test_backstop.py
